sass/chat.scss
/* Chat */

livechat{
    background:#eee;
    position:relative;
    display:block;
}

.livechat-message{
    width:90%;
    word-wrap: break-word;
    margin-bottom:5px;
    margin-top:5px;
    padding:10px;
    border-radius:10px;
}

.received .livechat-message{
    color:$color_2;
    background:#fff;
    border:1px solid darken(#eee,4%);
    border-top-left-radius:0;
    margin-left:0;
    margin-right:auto;
}

.sent .livechat-message{
    color:$color_2;
    background:$color_5;
    border:1px solid darken($color_5,5%);
    border-bottom-right-radius:0;
    margin-left:auto;
    margin-right:0;
}

.livechat-message-wrapper .date{
    font-size: 10px;
    color:lighten(black,20%);
    text-align:left;
}

.sent .date{
    text-align:right;
}

livechat .header{
    padding:5px;
    background: $color_3;
}

livechat .header h3{
    color:#fff;
    font-size:15px;
}

livechat button{
    position:absolute;
    bottom:0px;
    right:10px;
}

livechat textarea{
    position:absolute;
    bottom:0px;
    left:10px;
    height:50px;
    padding:5px;
    border:none;
    font-size:13px;
    background:#fff;
    resize:none;
}

livechat .message-log{
    overflow-y: scroll;
    overflow-x:hidden;
    max-height:100%;
    padding-left:5px;
    padding-right:15px;
}

livechat .sender{
    font-size:10px;
    text-align:right;
}

